--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind utilities;
 
-input[type="text"], input[type="password"], input[type="email"] {
+input[type="text"], input[type="password"], input[type="email"], input[type="textarea"], input[type="number"] {
     @apply w-full border my-2 py-2 px-3 rounded-2xl;
 }
 
