--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,13 @@
 @tailwind base;
 @tailwind utilities;
+@tailwind components;
 
-input[type="text"], input[type="password"], input[type="email"], input[type="textarea"], input[type="number"] {
+input[type="text"], input[type="password"], input[type="email"], input[type="textarea"], input[type="number"], textarea {
     @apply w-full border my-2 py-2 px-3 rounded-2xl;
+}
+
+textarea {
+    height: 140px;
 }
 
 button {
