--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,8 @@
 @tailwind utilities;
 @tailwind components;
 
-input[type="text"], input[type="password"], input[type="email"], input[type="textarea"], input[type="number"], textarea {
+input[type="text"], input[type="password"], input[type="email"], input[type="textarea"], input[type="number"], 
+input[type="tel"], textarea {
     @apply w-full border my-2 py-2 px-3 rounded-2xl;
 }
 
