--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,10 @@
 @tailwind utilities;
 @tailwind components;
 
+body {
+    @apply mx-16;
+}
+
 input[type="text"], input[type="password"], input[type="email"], input[type="textarea"], input[type="number"], 
 input[type="tel"], textarea {
     @apply w-full border my-2 py-2 px-3 rounded-2xl;
